# rust-product

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
crates/csv_process/: Cargo.toml
crates/csv_process/src/: lib.rs  main.rs  process.rs  r_cli.rs
src/: main.rs
