[package]
name = "rust_project"
version = "0.1.0"
license = "MIT"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[workspace.dependencies]
anyhow = "1.0.94"

[workspace]
resolver = "2"
members = ["crates/csv_process"]
