[package]
name = "csv_process"
version = "0.1.0"
authors = ["Ethan Wang <ethan.wang1993@outlook.com>"]
edition = "2021"

[dependencies]
anyhow.workspace = true
clap = { version = "4.5.22", features = ["derive"] }   # 命令行解析
csv = "1.3.1"
serde = { version = "1.0.215", features = ["derive"] } # 序列化
serde_json = "1.0.133"
